# P1-Project-Ticket-Sale

./: CMakeLists.txt  List_of_events.txt  README.md  main.c
Login Code/: login_functions.c  login_functions.h
Menu Code/: menu_functions.c  menu_functions.h
Profile Code/: profile_data_storage.c  profile_data_storage.h
Profile Menu/: Profile_Menu_Code.c  Profile_Menu_Code.h
Profile_Menu/: Profile_Menu_Code.c  Profile_Menu_Code.h
Purchasing of tickets/: Purchase_tickets_functions.c  Purchase_tickets_functions.h
Return Tickets/: Return_tickets.c  Return_tickets.h
Server/: Data.c  Data.h  List_of_events.txt  Referrals.txt  Test.txt  server_users.txt
Storage Code/: data_storage.c  data_storage.h
